# airbnb-price-predictor-api

./: .gitignore  README.md  app_gui.py  pyproject.toml  requirements.txt  train.py
.ipynb_checkpoints/: pyproject-checkpoint.toml
app/: pipeline_ganador.pkl
app/.ipynb_checkpoints/: main-checkpoint.py  schemas-checkpoint.py
config/.ipynb_checkpoints/: config-checkpoint.yaml
models/: modelo_airbnb_ganador.pkl
notebooks/: 01_EDA.ipynb  02_implementacion_pycaret.ipynb  02_implentacion_pycaret.ipynb
notebooks/.ipynb_checkpoints/: 01_EDA-checkpoint.ipynb  02_implementacion_pycaret-checkpoint.ipynb  02_implentacion_pycaret-checkpoint.ipynb
outputs/2026-05-16/19-11-45/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-16/19-13-26/.hydra/: hydra.yaml
outputs/2026-05-16/20-35-01/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-16/20-41-34/.hydra/: config.yaml  hydra.yaml
references/: data_dictionay.md
src/: main.py
src/plots/: plots.py
src/processing/: clean_target.py  transformers.py
src/processing/.ipynb_checkpoints/: __init__-checkpoint.py  clean_target-checkpoint.py
