[project]
name = "airbnb"
version = "0.1.0"
description = ""
authors = [
    {name = "aemedina24", email = "aemedina@unal.edu.co"}
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "pycaret==3.3.2",
    "scikit-learn==1.4.2",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "matplotlib==3.7.5",
    "scipy==1.11.4",
    "seaborn>=0.13.2,<0.14.0",
    "hydra-core>=1.3.2,<2.0.0",
    "joblib==1.3.2",
    "notebook>=7.5.6,<8.0.0",
    "ipykernel>=7.2.0,<8.0.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
